--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -1,1 +1,13 @@
 /* All styles for your Card Components live here */
+
+.card-container {
+  padding-left: 56px;
+}
+
+.card-banner {
+  border-radius: 5px;
+  width: 500px;
+  height: 250px;
+  background-image: url("https://tk-assets.lambdaschool.com/fcd75197-7d12-46ec-bc9e-4130f34822fa_reactbackground.png");
+  background-size: cover;
+}
