--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -28,7 +28,7 @@
 .card-content {
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  border: 1px solid grey;
+  border: 1px solid lightgray;
   padding: 0 5px 5px 15px;
   font-size: 14px;
   color: black;
@@ -45,7 +45,7 @@
   margin-top: 0px;
 }
 
-.card-content a {
+.card-content-src {
   color: grey;
   text-decoration: none;
 }
